[gd_scene load_steps=22 format=3 uid="uid://diqwp4nsg81"]

[ext_resource type="Script" path="res://scripts/Managers/player_manager.gd" id="1_bol01"]
[ext_resource type="Script" path="res://scripts/Managers/audio_manager.gd" id="2_2fx7r"]
[ext_resource type="SpriteFrames" uid="uid://de6st2b031xmn" path="res://graphics/sprite_frames/crab.tres" id="2_vgqku"]
[ext_resource type="Script" path="res://scripts/Managers/input_manager.gd" id="2_ygb67"]
[ext_resource type="Script" path="res://scripts/Managers/classical_physics_manager.gd" id="4_4koyh"]
[ext_resource type="Script" path="res://scripts/Managers/graphics_manager.gd" id="4_ip0yx"]
[ext_resource type="SpriteFrames" uid="uid://dltxuujnwpod5" path="res://graphics/sprite_frames/player_vfx.tres" id="5_hcyon"]
[ext_resource type="Script" path="res://scripts/Managers/h_boxes.gd" id="6_8qcfg"]
[ext_resource type="Script" path="res://scripts/Managers/timer_manager.gd" id="7_55aqn"]
[ext_resource type="AudioStream" uid="uid://co2db81g6tptx" path="res://audio/fx/crab_hurt.wav" id="7_yjw84"]
[ext_resource type="AudioStream" uid="uid://b06akq6jywac7" path="res://audio/fx/jump.wav" id="8_ckjp6"]
[ext_resource type="Script" path="res://scripts/Managers/stats_manager.gd" id="8_cyfrf"]
[ext_resource type="AudioStream" uid="uid://jai5pyjjofs2" path="res://audio/fx/crab_melee.wav" id="8_s5rao"]
[ext_resource type="AudioStream" uid="uid://i3pibin7y47h" path="res://audio/fx/crab_walk.wav" id="9_7beoi"]
[ext_resource type="Script" path="res://scripts/Managers/heuristic_physics_manager.gd" id="13_0khn0"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wg2ws"]
radius = 5.0
height = 35.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2x455"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qakdj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bjtaj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_l6m38"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qpvms"]

[node name="Player" type="RigidBody2D"]
mass = 3.0
gravity_scale = 2.66454e-15
custom_integrator = true
script = ExtResource("1_bol01")

[node name="Stats" type="Node2D" parent="."]
script = ExtResource("8_cyfrf")

[node name="Input" type="Node2D" parent="."]
script = ExtResource("2_ygb67")

[node name="PhysicsCollider" type="CollisionShape2D" parent="."]
z_index = 2
position = Vector2(2.08165e-12, 30)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_wg2ws")

[node name="ClassicalPhysics" type="Node2D" parent="."]
script = ExtResource("4_4koyh")

[node name="HeuristicPhysics" type="Node2D" parent="."]
script = ExtResource("13_0khn0")

[node name="Audio" type="Node2D" parent="."]
script = ExtResource("2_2fx7r")
hurt_sound = ExtResource("7_yjw84")
jump_sound = ExtResource("8_ckjp6")
jump_volume_db = -10.0
melee_sound = ExtResource("8_s5rao")
walk_sound = ExtResource("9_7beoi")

[node name="Dash" type="AudioStreamPlayer" parent="Audio"]

[node name="Death" type="AudioStreamPlayer" parent="Audio"]

[node name="Hurt" type="AudioStreamPlayer" parent="Audio"]

[node name="Idle" type="AudioStreamPlayer" parent="Audio"]

[node name="Jump" type="AudioStreamPlayer" parent="Audio"]

[node name="Melee" type="AudioStreamPlayer" parent="Audio"]

[node name="Ranged" type="AudioStreamPlayer" parent="Audio"]

[node name="Special" type="AudioStreamPlayer" parent="Audio"]

[node name="Walk" type="AudioStreamPlayer" parent="Audio"]

[node name="HBoxes" type="Node2D" parent="."]
script = ExtResource("6_8qcfg")

[node name="LeftHitBox" type="Area2D" parent="HBoxes"]

[node name="LeftHitBoxCollider" type="CollisionShape2D" parent="HBoxes/LeftHitBox"]
shape = SubResource("CapsuleShape2D_2x455")

[node name="RightHitBox" type="Area2D" parent="HBoxes"]

[node name="RightHitBoxCollider" type="CollisionShape2D" parent="HBoxes/RightHitBox"]
shape = SubResource("CapsuleShape2D_qakdj")

[node name="UpHitBox" type="Area2D" parent="HBoxes"]

[node name="UpHitBoxCollider" type="CollisionShape2D" parent="HBoxes/UpHitBox"]
shape = SubResource("CapsuleShape2D_bjtaj")

[node name="DownHitBox" type="Area2D" parent="HBoxes"]

[node name="DownHitBoxCollider" type="CollisionShape2D" parent="HBoxes/DownHitBox"]
shape = SubResource("CapsuleShape2D_l6m38")

[node name="HurtBox" type="Area2D" parent="HBoxes"]

[node name="HurtBoxCollider" type="CollisionShape2D" parent="HBoxes/HurtBox"]
shape = SubResource("CapsuleShape2D_qpvms")

[node name="Graphics" type="Node2D" parent="."]
script = ExtResource("4_ip0yx")
character_frames = ExtResource("2_vgqku")
character_speed_scale = 2.0
vfx_frames = ExtResource("5_hcyon")
vfx_speed_scale = 4.0

[node name="Character" type="AnimatedSprite2D" parent="Graphics"]
z_index = 1
texture_filter = 1
texture_repeat = 1
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(2, 2)
sprite_frames = ExtResource("2_vgqku")
animation = &"death"

[node name="VFX" type="AnimatedSprite2D" parent="Graphics"]
position = Vector2(2.08165e-12, 2.08165e-12)
sprite_frames = ExtResource("5_hcyon")
animation = &"land"
speed_scale = 4.0
offset = Vector2(2.08165e-12, 2.08165e-12)

[node name="Timers" type="Node2D" parent="."]
script = ExtResource("7_55aqn")

[node name="DamageCooldown" type="Timer" parent="Timers"]

[node name="DashCooldown" type="Timer" parent="Timers"]

[node name="JumpCooldown" type="Timer" parent="Timers"]

[node name="MeleeCooldown" type="Timer" parent="Timers"]
one_shot = true

[node name="MeleeHitBoxActive" type="Timer" parent="Timers"]
one_shot = true

[node name="RangedCooldown" type="Timer" parent="Timers"]
one_shot = true

[node name="RangedHitBoxActive" type="Timer" parent="Timers"]
one_shot = true

[node name="SpecialCooldown" type="Timer" parent="Timers"]

[node name="SpecialHitBoxActive" type="Timer" parent="Timers"]
one_shot = true
